--- a/Projet Onssa/App.config
+++ b/Projet Onssa/App.config
@@ -1,18 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  </configSections>
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
   </startup>
   <connectionStrings>
-    <add name="OnssaModelContainer" connectionString="metadata=res://*/OnssaModel.csdl|res://*/OnssaModel.ssdl|res://*/OnssaModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-IRG7UCK\SQLEXPRESS;initial catalog=OnssaProjet;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="OnssaModelContainer1" connectionString="metadata=res://*/OnssaModel.csdl|res://*/OnssaModel.ssdl|res://*/OnssaModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-IRG7UCK\SQLEXPRESS;initial catalog=gestionetudiant;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="OnssaModelContainer2" connectionString="metadata=res://*/OnssaModel.csdl|res://*/OnssaModel.ssdl|res://*/OnssaModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-IRG7UCK\SQLEXPRESS;initial catalog=gestionetudiant;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="OnssaModelContainer3" connectionString="metadata=res://*/OnssaModel.csdl|res://*/OnssaModel.ssdl|res://*/OnssaModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-IRG7UCK\SQLEXPRESS;initial catalog=ProjetOnssa;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="OnssaModelContainer4" connectionString="metadata=res://*/OnssaModel.csdl|res://*/OnssaModel.ssdl|res://*/OnssaModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-IRG7UCK\SQLEXPRESS;initial catalog=Onssa_Projet;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="OnssaModelContainer4" connectionString="metadata=res://*/OnssaModel.csdl|res://*/OnssaModel.ssdl|res://*/OnssaModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-KCK4EL9\SQLEXPRESS;initial catalog=Onssa_Projet;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
@@ -20,4 +16,12 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Bunifu.Licensing" publicKeyToken="f89b4760ba7dcb6b" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.2.0.0" newVersion="3.2.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
