--- a/Projet Onssa/App.config
+++ b/Projet Onssa/App.config
@@ -8,7 +8,7 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
   </startup>
   <connectionStrings>
-    <add name="OnssaModelContainer4" connectionString="metadata=res://*/OnssaModel.csdl|res://*/OnssaModel.ssdl|res://*/OnssaModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-IRG7UCK\SQLEXPRESS;initial catalog=Onssa_Projet;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="OnssaModelContainer4" connectionString="metadata=res://*/OnssaModel.csdl|res://*/OnssaModel.ssdl|res://*/OnssaModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-KCK4EL9\SQLEXPRESS;initial catalog=Onssa_Projet;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
