--- a/Projet Onssa/Projet Onssa.csproj
+++ b/Projet Onssa/Projet Onssa.csproj
@@ -73,6 +73,12 @@
     <Compile Include="Commission.cs">
       <DependentUpon>OnssaModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="CommissionForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CommissionForm.Designer.cs">
+      <DependentUpon>CommissionForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="FournisseurForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -146,6 +152,9 @@
     </Compile>
     <EmbeddedResource Include="Accueil.resx">
       <DependentUpon>Accueil.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CommissionForm.resx">
+      <DependentUpon>CommissionForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FournisseurForm.resx">
       <DependentUpon>FournisseurForm.cs</DependentUpon>
