--- a/Projet Onssa/Projet Onssa.csproj
+++ b/Projet Onssa/Projet Onssa.csproj
@@ -112,6 +112,12 @@
     <Compile Include="ModeleDevis.cs">
       <DependentUpon>OnssaModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="ModeleDevisForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ModeleDevisForm.Designer.cs">
+      <DependentUpon>ModeleDevisForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Morasse.cs">
       <DependentUpon>OnssaModel.tt</DependentUpon>
     </Compile>
@@ -170,6 +176,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="ConsultationForm.resx">
       <DependentUpon>ConsultationForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ModeleDevisForm.resx">
+      <DependentUpon>ModeleDevisForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
