--- a/Projet Onssa/Projet Onssa.csproj
+++ b/Projet Onssa/Projet Onssa.csproj
@@ -91,6 +91,12 @@
     <Compile Include="CommissionForm.Designer.cs">
       <DependentUpon>CommissionForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="FeForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FeForm.Designer.cs">
+      <DependentUpon>FeForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="FournisseurForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -185,6 +191,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="CommissionForm.resx">
       <DependentUpon>CommissionForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FeForm.resx">
+      <DependentUpon>FeForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FournisseurForm.resx">
       <DependentUpon>FournisseurForm.cs</DependentUpon>
