--- a/Projet Onssa/Projet Onssa.csproj
+++ b/Projet Onssa/Projet Onssa.csproj
@@ -42,6 +42,9 @@
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
+    <Reference Include="Guna.UI2">
+      <HintPath>..\..\..\Downloads\Guna_UI_Framework_Ultimate_v2.0.0.1\Guna_UI_Framework_Ultimate_v2.0.0.1\Guna_UI_Framework_Ultimate_v2.0.0.1\Guna.UI-Framework-Lib-master\Guna.UI2 WinForms\.net 4.0\Guna.UI2.dll</HintPath>
+    </Reference>
     <Reference Include="MaterialSkin, Version=2.1.2.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\MaterialSkin.2.2.1.3\lib\net461\MaterialSkin.dll</HintPath>
     </Reference>
@@ -91,6 +94,7 @@
     <Compile Include="CommissionForm.Designer.cs">
       <DependentUpon>CommissionForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="DeclarationGlobale.cs" />
     <Compile Include="FeForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -126,6 +130,12 @@
     </Compile>
     <Compile Include="GestionCompte.cs">
       <DependentUpon>OnssaModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="GestionCompteForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GestionCompteForm.Designer.cs">
+      <DependentUpon>GestionCompteForm.cs</DependentUpon>
     </Compile>
     <Compile Include="ModeleDevis.cs">
       <DependentUpon>OnssaModel.tt</DependentUpon>
@@ -227,6 +237,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="ConsultationForm.resx">
       <DependentUpon>ConsultationForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GestionCompteForm.resx">
+      <DependentUpon>GestionCompteForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ModeleDevisForm.resx">
       <DependentUpon>ModeleDevisForm.cs</DependentUpon>
