--- a/Projet Onssa/packages.config
+++ b/Projet Onssa/packages.config
@@ -2,7 +2,7 @@
 <packages>
   <package id="EntityFramework" version="6.2.0" targetFramework="net472" />
   <package id="EntityFramework.fr" version="6.2.0" targetFramework="net472" />
-  <package id="Guna.UI2.WinForms" version="2.0.1.4" targetFramework="net472" />
-  <package id="MaterialSkin.2" version="2.1.3" targetFramework="net472" />
+  <package id="MaterialSkin" version="0.2.1" targetFramework="net472" />
+  <package id="MaterialSkin.2" version="2.1.4" targetFramework="net472" />
   <package id="Refractored.FloatingActionButtonForms" version="2.1.0" targetFramework="net472" />
 </packages>
