--- a/Projet Onssa/Projet Onssa.csproj
+++ b/Projet Onssa/Projet Onssa.csproj
@@ -101,6 +101,11 @@
     <Compile Include="FeForm.Designer.cs">
       <DependentUpon>FeForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Form1.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Form1.resx</DependentUpon>
+    </Compile>
     <Compile Include="FournisseurForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -214,6 +219,12 @@
     <Compile Include="PvrForm.Designer.cs">
       <DependentUpon>PvrForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="test.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="test.Designer.cs">
+      <DependentUpon>test.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Accueil.resx">
       <DependentUpon>Accueil.cs</DependentUpon>
     </EmbeddedResource>
@@ -229,7 +240,10 @@
     <EmbeddedResource Include="FeForm.resx">
       <DependentUpon>FeForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form1.resx" />
+    <EmbeddedResource Include="Form1.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Form1.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Include="FournisseurForm.resx">
       <DependentUpon>FournisseurForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -269,6 +283,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="PvrForm.resx">
       <DependentUpon>PvrForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="test.resx">
+      <DependentUpon>test.cs</DependentUpon>
     </EmbeddedResource>
     <EntityDeploy Include="OnssaModel.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
