--- a/Projet Onssa/Projet Onssa.csproj
+++ b/Projet Onssa/Projet Onssa.csproj
@@ -230,8 +230,20 @@
     <Compile Include="Ligne.cs">
       <DependentUpon>OnssaModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="LigneForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="LigneForm.Designer.cs">
+      <DependentUpon>LigneForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Lrg.cs">
       <DependentUpon>OnssaModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="LrgForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="LrgForm.Designer.cs">
+      <DependentUpon>LrgForm.cs</DependentUpon>
     </Compile>
     <Compile Include="ModeleDevis.cs">
       <DependentUpon>OnssaModel.tt</DependentUpon>
@@ -290,6 +302,12 @@
     </Compile>
     <Compile Include="Paragraphe.cs">
       <DependentUpon>OnssaModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="ParagrapheForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ParagrapheForm.Designer.cs">
+      <DependentUpon>ParagrapheForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Produit.cs">
       <DependentUpon>OnssaModel.tt</DependentUpon>
@@ -387,6 +405,12 @@
     <EmbeddedResource Include="LectureOv.resx">
       <DependentUpon>LectureOv.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="LigneForm.resx">
+      <DependentUpon>LigneForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="LrgForm.resx">
+      <DependentUpon>LrgForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ModeleDevisForm.resx">
       <DependentUpon>ModeleDevisForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -398,6 +422,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="OvForm.resx">
       <DependentUpon>OvForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ParagrapheForm.resx">
+      <DependentUpon>ParagrapheForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
