--- a/Projet Onssa/Projet Onssa.csproj
+++ b/Projet Onssa/Projet Onssa.csproj
@@ -155,6 +155,9 @@
       <DependentUpon>CrystalReportPvr.rpt</DependentUpon>
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="DataSetReport.cs">
+      <DependentUpon>DataSetReport.xsd</DependentUpon>
+    </Compile>
     <Compile Include="DataSetReport.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -244,6 +247,12 @@
     </Compile>
     <Compile Include="LectureOv.Designer.cs">
       <DependentUpon>LectureOv.cs</DependentUpon>
+    </Compile>
+    <Compile Include="LecturePvj.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="LecturePvj.Designer.cs">
+      <DependentUpon>LecturePvj.cs</DependentUpon>
     </Compile>
     <Compile Include="LecturePvr.cs">
       <SubType>Form</SubType>
@@ -445,6 +454,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="LectureOv.resx">
       <DependentUpon>LectureOv.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="LecturePvj.resx">
+      <DependentUpon>LecturePvj.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="LecturePvr.resx">
       <DependentUpon>LecturePvr.cs</DependentUpon>
