--- a/Projet Onssa/App.config
+++ b/Projet Onssa/App.config
@@ -9,10 +9,10 @@
 		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
 	</startup>
 	<connectionStrings>
-		<add name="OnssaModelContainer4" connectionString="metadata=res://*/OnssaModel.csdl|res://*/OnssaModel.ssdl|res://*/OnssaModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-IRG7UCK\SQLEXPRESS;initial catalog=Onssa_Projet;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+		<add name="OnssaModelContainer4" connectionString="metadata=res://*/OnssaModel.csdl|res://*/OnssaModel.ssdl|res://*/OnssaModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-KCK4EL9\SQLEXPRESS;initial catalog=Onssa_Projet;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;"
 		  providerName="System.Data.EntityClient" />
 		<add name="Projet_Onssa.Properties.Settings.Onssa_ProjetConnectionString"
-		  connectionString="Data Source=DESKTOP-IRG7UCK\SQLEXPRESS;Initial Catalog=Onssa_Projet;Integrated Security=True"
+		  connectionString="Data Source=DESKTOP-KCK4EL9\SQLEXPRESS;Initial Catalog=Onssa_Projet;Integrated Security=True"
 		  providerName="System.Data.SqlClient" />
 	</connectionStrings>
 	<entityFramework>
